--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 
-<section class="hero" style="background-image: url('static/images/thumbnail.jpg'); background-size: cover; background-position: center;">
+<section class="hero" style="background-image: url('static/images/thumbnail.png'); background-size: cover; background-position: center;">
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
@@ -53,26 +53,26 @@
           <h1 class="title is-1 publication-title">Encoding and Controlling Global Semantics for Long-form Video Question Answering</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://nguyentthong.github.io/" style="color: #FF4500 !important;">Thong Thanh Nguyen</a><sup>1</sup>,</span>
+              <a href="https://nguyentthong.github.io/" style="color: #0000ee !important;">Thong Thanh Nguyen</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="" style="color: #FF4500 !important;">Zhiyuan Hu</a><sup>1</sup>,</span>
+              <a href="" style="color: #0000ee !important;">Zhiyuan Hu</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="" style="color: #FF4500 !important;">Xiaobao Wu</a><sup>2</sup>,
+              <a href="" style="color: #0000ee !important;">Xiaobao Wu</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="" style="color: #FF4500 !important;">Cong-Duy Nguyen</a><sup>2</sup>,
+              <a href="" style="color: #0000ee !important;">Cong-Duy Nguyen</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="" style="color: #FF4500 !important;">See-Kiong Ng</a><sup>1</sup>,
+              <a href="" style="color: #0000ee !important;">See-Kiong Ng</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="" style="color: #FF4500 !important;">Luu Anh Tuan</a><sup>2</sup>,
+              <a href="" style="color: #0000ee !important;">Luu Anh Tuan</a><sup>2</sup>,
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>National University of Singapore (NUS),</span>
-            <span class="author-block"><sup>2</sup>Nanyang Technological University (NTU)</span>
+            <span class="author-block" style="color: black;"><sup>1</sup>National University of Singapore (NUS),</span>
+            <span class="author-block" style="color: black;"><sup>2</sup>Nanyang Technological University (NTU)</span>
           </div>
 
           <div class="column has-text-centered">
