--- a/index.html
+++ b/index.html
@@ -39,45 +39,45 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Chau Philomene One' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
+
 </head>
 <body>
 
 
-
-
-<section class="hero" style="background-image: url('static/images/thumbnail.png'); background-size: cover; background-position: center;">
-  <div class="hero-body">
+<section class="hero">
+  <div class="hero-body" style="background-image: url(static/images/thumbnail.png); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100vw;">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Encoding and Controlling Global Semantics for Long-form Video Question Answering</h1>
+          <h1 class="title is-1 publication-title" style="font-family: Chau Philomene One; color: #c89600;">Encoding and Controlling Global Semantics for Long-form Video Question Answering</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://nguyentthong.github.io/" style="color: #0000ee !important;">Thong Thanh Nguyen</a><sup>1</sup>,</span>
+              <a href="https://nguyentthong.github.io/" style="color: black !important; font-family: EB Garamond; font-weight: bold;">Thong Thanh Nguyen</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="" style="color: #0000ee !important;">Zhiyuan Hu</a><sup>1</sup>,</span>
+              <a href="" style="color: black !important; font-family: EB Garamond; font-weight: bold;"">Zhiyuan Hu</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="" style="color: #0000ee !important;">Xiaobao Wu</a><sup>2</sup>,
+              <a href="" style="color: black !important; font-family: EB Garamond; font-weight: bold;"">Xiaobao Wu</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="" style="color: #0000ee !important;">Cong-Duy Nguyen</a><sup>2</sup>,
+              <a href="" style="color: black !important; font-family: EB Garamond; font-weight: bold;"">Cong-Duy Nguyen</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="" style="color: #0000ee !important;">See-Kiong Ng</a><sup>1</sup>,
+              <a href="" style="color: black !important; font-family: EB Garamond; font-weight: bold;"">See-Kiong Ng</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="" style="color: #0000ee !important;">Luu Anh Tuan</a><sup>2</sup>,
+              <a href="" style="color: black !important; font-family: EB Garamond; font-weight: bold;"">Luu Anh Tuan</a><sup>2</sup>,
             </span>
-          </div>
+          </div> 
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block" style="color: black;"><sup>1</sup>National University of Singapore (NUS),</span>
-            <span class="author-block" style="color: black;"><sup>2</sup>Nanyang Technological University (NTU)</span>
+            <span class="author-block" style="color: black; font-family: EB Garamond; font-weight: bold;""><sup>1</sup>National University of Singapore (NUS),</span>
+            <span class="author-block" style="color: black; font-family: EB Garamond; font-weight: bold;""><sup>2</sup>Nanyang Technological University (NTU)</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2405.19723"
                    class="external-link button is-normal is-rounded is-dark">
@@ -97,7 +97,6 @@
                 </a>
               </span>
 
-              <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/zhiyuanhubj/long_form_videoqa"
                    class="external-link button is-normal is-rounded is-dark">
@@ -107,7 +106,6 @@
                   <span>Code</span>
                   </a>
               </span>
-              <!-- Dataset Link. -->
               <span class="link-block">
                 <a href="https://github.com/zhiyuanhubj/Long_form_VideoQA/tree/main/egoqa_madqa"
                    class="external-link button is-normal is-rounded is-dark">
@@ -125,8 +123,7 @@
   </div>
 </section>
 
-<br>
-<br>
+<br><br>
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -139,12 +136,11 @@
   </div>
 </section>
 
-
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3" style="color: black;">Abstract</h2>
+        <h2 class="title is-3" style="color: #c89600; font-family: Chau Philomene One;">Abstract</h2>
         <div class="content has-text-justified">
           <p>
             Seeking answers effectively for long videos is essential to build video question answering (videoQA) systems. Previous methods adaptively select frames and regions from long videos to save computations. However, this fails to reason over the whole sequence of video, leading to sub-optimal performance. To address this problem, we introduce a state space layer (SSL) into multi-modal Transformer to efficiently integrate global semantics of the video, which mitigates the video information loss caused by frame and region selection modules. Our SSL includes a gating unit to enable controllability over the flow of global semantics into visual representations. To further enhance the controllability, we introduce a cross-modal compositional congruence (C^3) objective to encourage global semantics aligned with the question. To rigorously evaluate long-form videoQA capacity, we construct two new benchmarks Ego-QA and MAD-QA featuring videos of considerably long length, i.e. 17.5 minutes and 1.9 hours, respectively. Extensive experiments demonstrate the superiority of our framework on these new as well as existing datasets.
@@ -161,7 +157,7 @@
     <!-- Title Section -->
     <div class="columns is-centered has-text-centered">
       <div class="column">
-        <h2 class="title is-3"><font color="black">Ego-QA and MAD-QA Datasets</font></h2>
+        <h2 class="title is-3" style="font-family: Chau Philomene One;"><font color="#c89600">Ego-QA and MAD-QA Datasets</font></h2>
       </div>
     </div>
   </div>
@@ -197,7 +193,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-full">
-        <h2 class="title is-3"><font color="black">Gated State Space Layer and Compositional Congruence for Long-form VideoQA</font></h2>
+        <h2 class="title is-3" style="font-family: Chau Philomene One;"><font color="#c89600">Gated State Space Layer and Compositional Congruence</font></h2>
       </div>
     </div>
   </div>
@@ -226,7 +222,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-full">
-        <h2 class="title is-3"><font color="black">Experimental Results</font></h2>
+        <h2 class="title is-3" style="font-family: Chau Philomene One;"><font color="#c89600">Experimental Results</font></h2>
       </div>
     </div>
   </div>
@@ -265,7 +261,7 @@
 <!--BibTex citation -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
-    <h2 class="title has-text-centered"><font color="black">BibTeX</font></h2>
+    <h2 class="title has-text-centered" style="font-family: Chau Philomene One;"><font color="#c89600">BibTeX</font></h2>
     <pre><code>
       @article{nguyen2024encoding,
         author    = {Nguyen, Thong Thanh and Hu, Zhiyuan and Wu, Xiaobao and Nguyen, Cong-Duy T and Ng, See-Kiong and Luu, Anh Tuan},
