--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title" style="font-family: Chau Philomene One; color: #cda11c;">Encoding and Controlling Global Semantics for Long-form Video Question Answering</h1>
+          <h1 class="title is-1 publication-title" style="font-family: Chau Philomene One; color: #866400;">Encoding and Controlling Global Semantics for Long-form Video Question Answering</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://nguyentthong.github.io/" style="color: black !important; font-family: EB Garamond; font-weight: bold;">Thong Thanh Nguyen</a><sup style="font-family: EB Garamond; font-weight: bold;">1</sup>,</span>
